# labelqa-kit

./: .gitignore  .pre_commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: labels.csv  rules.yml  schema.json
src/labelqa/: cli.py  config.py  rules.py
src/labelqa/generators/: synthetic_data.py
src/labelqa/reporting/: report.html.j2  report.py
src/labelqa/utils/: io.py  logging.py
tests/: test_cli.py  test_rules.py
